main.css
 #greeting, #title, #button{
  opacity: 0; 
  transform: translateY(-100%); 
  animation: dropDown 1.5s forwards ease-in-out; 
}



@keyframes bounce {
  0%, 100% {
      transform: translateY(0);
  }
  50% {
      transform: translateY(-20px);
  }
}

@keyframes dropDown {
  0% {
      opacity: 0;
      transform: translateY(-100%);
  }
  100% {
      opacity: 1;
      transform: translateY(0);
  }
}


body{
  background-image: linear-gradient(to bottom right , #ebe5fa, rgb(220, 209, 250), #efd7fa, rgb(209, 214, 250) );
}

html{
  scroll-behavior: smooth;
}
#demo{
  background-color: #9d7df6;
  color: white;
  border-radius: 10px;
  padding: 5px;
  font-size: small;
}

#demo:hover{
  background-color: #8469cf;
  transition: all 0.3s ease; 
}

#course{
  color: rgb(101, 101, 101);
}

#figma:hover{
  background-color: #424242;
  transition: all 0.3s ease; 

}
#github:hover{
  background-color: #000000;
  transition: all 0.3s ease; 

}

#figma{
  background-color: rgb(122, 122, 122);
  color: white;
  border-radius: 10px;
  padding: 5px;
  font-size: small;
}
#github{
  background-color: #242424;
  color: white;
  border-radius: 10px;
  padding: 5px;
  font-size: small;
}
#contactLogos > a{
  margin: 20px;
}

#contactLogos{
  display: flex;
  justify-content: center;
  align-items: center;    
  background-color: (243, 240, 249);  

  /* margin: 0 auto; Adjust this value to set the spacing between the logos */
}

footer{
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin: 16px;
}

.heading{

  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 100%;
  height: 100vh;
  /* background: linear-gradient(to bottom, #ffffff 0%, #be96f0 100%); */
}



#aboutMe{
  text-align: center; color: #353333; font-size: 20px; font-family: Reem Kufi; font-weight: 400; 
  word-wrap: break-word;
  width: 60%;
  /* padding:30px; */
  margin-top:20px;
  /* margin-bottom:20px; */
  /* background-color: rgba(240, 255, 255, 0.518); */
  border-radius: 50px;
  color: rgb(24, 23, 23);
  /* border: solid 7px;
  border-color: azure; */
  height: 70vh;
}

#skills{
  padding-top: 10%;
}

#skillsLogos{
  /*fix the padding and margins it does not look centered properly*/
  margin-top:20px;
  padding-right:20px;
  padding-left: 20px;
  padding-bottom:20px; 
  border-radius: 50px;
  color: black;
  background-color: white;
  border-radius: 20px;
  box-shadow: 1px 1px 10px rgb(58, 0, 99);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#logos1{
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 5px;
}

#logos1>img{
  margin: 5px;
}


#skillsLogos > h3{
  margin-top: 25px;
  margin-bottom: 10px;
}

*{
  margin:0;
  padding: 0;
  font-family: 'Reem Kufi', sans-serif; 
  box-sizing: border-box;
}
#middle{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.about, .projects, .contact{
  padding-bottom: 10%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 100%;
}
.contact{
  height: 70vh;
}
.projects, .contact{
  padding-top: 2%;
}

.about{
  padding-top: 8%;
}

#greeting {
  font-size: 60px;
  font-family: 'Reem Kufi', sans-serif; 
  display: flex;
  flex-direction: row;
 
}

.regular {
  color: black; /* Set the color for "Hi, I'm" to black */
  font-weight: lighter;
  padding-right: 18px;
}

.bold-purple {
  font-weight: bold;
  color: #8155FF; /* Set the color for "Shahd Khartabil" to purple */
}

#title {
  font-size: 30px;
  font-family: 'Reem Kufi', sans-serif;  
  font-style: italic;
  color:rgb(71, 70, 73); 
}

.navigation {
  font-size: 20px;
  font-family: 'Reem Kufi', sans-serif;
  position: fixed;
  z-index: 2;
  top:0;
  left:0;
  right: 0;
  padding-top: 10px;
  padding-bottom: 10px;
  background-color: rgb(48, 48, 49)


}

.navigation ul {
  list-style-type: none;
  display: flex;
  justify-content: center;
  padding: 0;
}

.navigation ul li {
  margin: 0 25px;
}

.navigation ul li a {
  text-decoration: none;
  transition: all 0.3s ease; 
  color:#dad6d6;
}

.navigation ul li a:hover {
  font-weight: bold;
  text-shadow: 2px 2px 7px rgba(0, 0, 0, 0.5);
  transition: all 0.3s ease; 

}


#button {
  display: flex;
  justify-content: center;
  margin-top: 20px;
}

button {
  padding: 6px 24px;
  border: none;
  border-radius: 30px;
  font-size: 18px;
  font-weight: bold;
  color: white;
  background-color: #8155FF;
  cursor: pointer;
  transition: all 0.3s ease;
}

button:hover {
  background-color: #4e3299;
  transition: all 0.3s ease;
}

#projects1, #projects2{
  display: flex;
  padding-right: 20px;
  padding-left: 20px;
  align-content: center;
  justify-content: center;
  width: 80%;
}





a{
  text-decoration: none;
  color: inherit;
}

#aboutMe > a{
  color: #8155FF;
  font-weight: bold;
}

#aboutMe > a:hover{
  color:#4e3299
}


input[type=text], input[type=email], select, textarea {
  width: 100%; 
  padding: 10px; 
  border: 1px solid #8155FF; 
  border-radius: 10px; 
  box-sizing: border-box; 
  margin-top: 6px; 
  margin-bottom: 16px; 
  resize: none;
}





/* Styling for the hidden content */
#projectscontainer{
  background-color:white;
  width: 40%;
  padding: 10px;
  margin: 10px;
  border-radius: 20px;
  box-shadow: 1px 1px 5px grey;
  align-items: center;
  justify-content: center;
}

.bottomProjects{
  margin-bottom: 38px;
}

#projects1{
  display: flex;
}
/* Styling for the image container */
.image-container {
  position: relative;
  padding: 20px;
}
 
#techStack{
  display: flex;
}

#techStack > p {
  color: white;
  background-color: #8155FF;
  border-radius: 30px;
  padding: 6px;
  font-size: small;
  margin: 5px;
  
} 

.header {
  display: flex;
  justify-content: space-between;
}

.links {
  display: flex;
}

.links p {
  margin: 0;
  padding: 0 5px;
  color: rgba(0, 0, 0, 0.372);
}

#subtitle{
  color: #3533338d;
}

#mycontacts{
  margin-top: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

#mycontacts > p {
  border-radius: 50px;
  color: black;
  background-color: white;
  border: solid 1px;
  border-color:#8155FF;
  box-shadow: 2px 2px 5px #8155FF;

  padding: 6px 12px;
  margin: 10px;
}

#mycontacts > p:hover {
  border-radius: 50px;
  color: white;
  border: solid 1px;
  border-color:#8155FF;
  padding: 6px 12px;
  margin: 10px;
  background-color:#8155FF;
  transition: all 0.3s ease; 
  cursor: pointer;
}

.dark-mode {
  background-image: linear-gradient(to bottom right , #212122, rgb(57, 55, 65), rgb(61, 58, 71));
  color:#dad6d6 ;
}

.dark-mode #regular{
  color: #dad6d6;
}

.dark-mode #title{
  color: #dad6d6ad;

}
.dark-mode .navigation a{
  color:white;
}

.dark-mode .navigation{
  background-color:rgb(48, 48, 48);
}

.dark-mode #about p {
  color: #ffffff; /* Set your dark mode text color for paragraphs */
}

.dark-mode #toggleDark{
  color: white;
}

.dark-mode #menuContainer{
  background-color: #191919;
  color: white;
}

.dark-mode #mycontacts>p {
  background-color:#313034;
  color: white;
}

.dark-mode #mycontacts :hover{
  background-color:#18181a;
  color: white;
  transition: 0.3s ease-in;
}

.dark-mode #projectscontainer {
  background-color: #313034;
  box-shadow: 0px 0px 10px rgb(110, 109, 109)
}

.dark-mode #skillsLogos {
  color: white;
  background-color: #313034;
  box-shadow: 0px 0px 10px rgb(110, 109, 109)
}

#toggleDark{
    position: fixed;
    right: 20px;
    background: none;
    border: none;
    cursor: pointer;
    z-index: 1000;
    color: #dad6d6;
}

.menu-button-container {
  display: none; /* Hide the menu button by default */
}

/* Show the menu button only on screens with a maximum width of 768px */
@media (max-width: 768px) {
  .menu-button-container {
      display: block; /* Display the menu button on small screens */
  }

  .menu-container {
      position: fixed;
      top: 0;
      right: -300px; /* Initially hide the menu */
      width: 250px;
      height: 100%;
      background-color: white;
      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
      overflow-x: hidden;
      transition: 0.3s;
      z-index: 9999; /* Set a higher value for the z-index */
      display: flex;
      flex-direction: column;
      align-items: center; /* Center align content horizontally */
      padding-top: 60px; /* Adjust the padding for vertical centering */
  }

  .menu-container.menu-visible {
      right: 0; /* Show the menu */
  }
}








/* Add a media query for smaller screens */
@media (max-width: 768px) {



  .menu-container {
    position: fixed;
    top: 0;
    right: -300px; /* Initially hide the menu */
    width: 250px;
    height: 100%;
    background-color: white;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
    overflow-x: hidden;
    transition: 0.3s;
    z-index: 9999;
    display: flex;
    flex-direction: column;
    align-items: center; /* Center align content horizontally */
}

.menu-button-container{
  position:fixed;
}

.menu-container.menu-visible {
    right: 0; /* Show the menu */
}

#openMenu{
  background-color: inherit;
  color:#8155FF;
}

  .navigation ul {
    flex-direction: column;
    align-items: center;
    height: 60vh;
  }

#nav-container {
    display: flex;
    flex-direction: column;
    align-items: center;
} 


#toggleDark{
  position: static;
  align-self: center;
}


  #middle{
    height: 100vh;
    align-items: center;
    align-content: center;
    align-self: center;
  }

  #aboutMe{
    font-size: 16px;
  }

  #contact, #aboutMe{
    height: 100vh;
  }

  #prompt{
    text-align: center;
    margin: 10px;
  }


  .navigation ul li {
    margin: 10px 0;
  }

  .navigation {
    position: static;
    background-color: transparent;
  }

  #middle {
    text-align: center;
  }

  .heading {
    height: auto;
    z-index: 1;
  }

  #skillsLogos, #projectscontainer {
    width: 100%;
  }

  #skillsLogos > h3 {
    margin-top: 10px;
    margin-bottom: 5px;
  }

  #projects1, #projects2 {
    flex-direction: column;
  }

  #techStack {
    flex-wrap: wrap;
  }

  #techStack > p {
    margin: 3px;
  }

  #links{
    flex-wrap: wrap;
    margin: 3px;
    max-height:min-content;
  }


  #mycontacts {
    margin-top: 15px;
  }

  #mycontacts > p {
    margin: 5px;
  }

  #mycontacts p:hover {
    cursor: pointer;
}

  .footer {
    margin-top: 20px;
  }

  #contactLogos > a {
    margin: 10px;
  }

  footer {
    margin: 10px;
  }

  #aboutMe{
    width: 80%;
    padding: 0px;
  }

  #skillsLogos{
    width: 70%;
  }

  #greeting{
    flex-direction: column;  
  }
}

